--- a/Surface Area and Volume/Properties/Resources.resx
+++ b/Surface Area and Volume/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="sphere" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sphere.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="snickers-ice-cream-cone-110ml" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\snickers-ice-cream-cone-110ml.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
